
################################################################################
##                                                                            ##
##  This file is part of MCPL (see https://mctools.github.io/mcpl/)           ##
##                                                                            ##
##  Copyright 2015-2025 MCPL developers.                                      ##
##                                                                            ##
##  Licensed under the Apache License, Version 2.0 (the "License");           ##
##  you may not use this file except in compliance with the License.          ##
##  You may obtain a copy of the License at                                   ##
##                                                                            ##
##      http://www.apache.org/licenses/LICENSE-2.0                            ##
##                                                                            ##
##  Unless required by applicable law or agreed to in writing, software       ##
##  distributed under the License is distributed on an "AS IS" BASIS,         ##
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ##
##  See the License for the specific language governing permissions and       ##
##  limitations under the License.                                            ##
##                                                                            ##
################################################################################

[build-system]
requires = ["setuptools>=75.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpl"
version = "2.2.0"
dependencies = [ 'mcpl-core==2.2.0', 'mcpl-python==2.2.0' ]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  { name="MCPL developers (Thomas Kittelmann, et. al.)" },
]
description = "Utilities and API for accessing MCPL (.mcpl) files"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://mctools.github.io/mcpl/"
"Bug Tracker" = "https://github.com/mctools/mcpl/issues"
