[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "mcpl.__version__"}

[project]
name = "mcpl-python"
dynamic = [ 'version' ]
requires-python = ">=3.8"
dependencies = [ 'numpy>=1.22' ]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="MCPL developers (Thomas Kittelmann, et. al.)" },
]
description = "Utilities and API for accessing MCPL (.mcpl) files"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://mctools.github.io/mcpl/"
"Bug Tracker" = "https://github.com/mctools/mcpl/issues"

[project.scripts]
pymcpltool = "mcpl.mcpl:main"
